--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-queue": "^2.3",
         "kreait/firebase-php": "^4.32",
+        "opis/closure": "^3.4",
         "npm-asset/gasparesganga-jquery-loading-overlay": "^2.1"
     },
     "require-dev": {
